--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700" rel="stylesheet">
 
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700,800,900&amp;subset=latin-ext" rel="stylesheet">
+
     <title>React core app</title>
   </head>
   <body>
